--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
-name: Jef Armstrong
 pygments: true
+permalink: /posts/:title
+
+name: Jef Armstrong
+url: http://jefarmstrong.com
+avatar_url: images/buddy_me.jpeg
+description: My blog. 
+twitter: jefarmstrong
+github: jefarmstrong
+linkedin: jefarmstrong
+work: https://www.cuenotes.com
