added mondrian blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-pygments: true
-markdown: kramdown
+highlighter: pygments
+#pygments: true
+#markdown: kramdown
 permalink: /posts/:title
 
 name: Jef Armstrong
